--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.2</version>
+		<version>2.7.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.cassi</groupId>
+	<groupId>br.com.ecommerce</groupId>
 	<artifactId>ecommerce</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ecommerce</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Uma API para Ecommerce</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
